# squadpilot

./: Dockerfile  README.md  pyproject.toml
squadpilot/: squadpilot.py
